fix: fixed compilation errors caused by advanced syntax